# draw-sgp-electoral-boundaries

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  POST.md  README.md  SCORING.md  algorithm.md  ge2025_polling_districts.kml  ge2025_polling_districts_and_electoral_size.json  index.html  map.html  pyproject.toml
algorithms/: local_swap.py
annotations/: local_swap.json  official_ge_2025.json
assignments/: local_swap.json  official_ge_2025.json
intermediate_data/: ge2025_polling_distrct_and_estimated_elector_size.json  ge2025_polling_districts_fixed.kml  ge2025_polling_districts_to_adjacent_districts.json  mrt_stations_labeled.csv
modelling/: bdrs.xlsx  equal_consts.ipynb  equal_cstcs.ipynb  equal_cstcs_julia.ipynb  linear_programming.ipynb  mst.ipynb  or_tools_experiment.ipynb  or_tools_experiment_1.ipynb  or_tools_experiment_101.ipynb  or_tools_experiment_11.ipynb  or_tools_experiment_12.ipynb  or_tools_experiment_13.ipynb  split_two.ipynb  split_two_1.ipynb
preprocessing/: polling-districts-2020-nathan.kml  process_kml.ipynb  process_to_matrix.ipynb  processed_dataframe.pkl  residents-subzone-2017-metadata.txt  residents-subzone-2017.kml
processed_data/: ge2025_polling_distrct_and_estimated_elector_size.json  ge2025_polling_districts_fixed.kml  ge2025_polling_districts_to_adjacent_districts.json  ge2025_polling_districts_with_elector_size.geojson  ge2025_polling_districts_with_information.geojson
raw_data/: ge2025_electoral_boundary.geojson  ge2025_electoral_divisions_and_polling_districts.json  ge2025_polling_districts.kml  ge2025_smc_grc.kml  mrt_stations.csv  (+2 more)
(+21 files in other folders)
